<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SFS2X: Connector</string>
	<string name="connect_dialog_server_address">SmartFoxServer2X IP address:</string>
	<string name="connect_dialog_server_port">SmartFoxServer2X port:</string>
    <string name="hint_server_address">Server address</string>
    <string name="hint_server_port">Server Port</string>
    <string name="connect">Connect</string>
    <string name="status">"Status: "</string>
    <string name="connected">Connected</string>
    <string name="connection_lost">Connection Lost</string>
    <string name="connection_error">Connection Error</string>
    <string name="logged_into">Logged:</string>
    <string name="joined_to_room">You have joined:</string>
    <string name="example_zone">BasicExamples</string>
    <string name="example_lobby">The Lobby</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnected">Disconnected</string>
    <string name="log_2points">Log:</string>
    <string name="test">Test</string>
    <string name="connecting">Connecting</string>
    <string name="use_bluebox">Use Bluebox</string>
    <!-- strings added by Stone -->
    <string name="stone_test_zone">StoneTestZone</string>



</resources>